CHORE: RUN 이름 추가

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -10,4 +10,5 @@ jobs:
   cicd:
     runs-on: ubuntu-latest
     steps:
-      - run: "echo 'RUN test'"
+      - name: "Introduce"
+        run: "echo 'RUN test'"
